--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Symfony</h5>
                         <p class="card-text">Symfony est un framework PHP pour les applications web. Il est reconnu pour sa flexibilité et ses performances.</p>
-                        <a href="/html/symfony.html" class="btn btn-primary mt-auto">Voir plus</a>
+                        <a href="/doc_public/html/symfony.html" class="btn btn-primary mt-auto">Voir plus</a>
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Git</h5>
                         <p class="card-text">Git est un système de gestion de versions décentralisé, utilisé pour suivre les modifications dans les fichiers de code source.</p>
-                        <a href="/html/git.html" class="btn btn-primary">Voir plus</a>
+                        <a href="/doc_public/html/git.html" class="btn btn-primary">Voir plus</a>
                     </div>
                 </div>
             </div>
