--- a/html/git.html
+++ b/html/git.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <!-- Bouton d'accueil -->
     <div class="home-button-container">
-        <a href="/" class="background button-common home-button">
+        <a href="https://pharallaxe.github.io/doc_public/" class="background button-common home-button">
             <i class="bi bi-house-fill"></i>
         </a>
     </div>
